<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:filterTouchesWhenObscured="true">

    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            android:visible="true"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView"/>

    <item
            android:id="@+id/order_ascending"
            android:title="@string/ascending"
            app:showAsAction="never"/>
    <item
            android:id="@+id/order_descending"
            android:title="@string/descending"
            app:showAsAction="never"/>
    <item
            android:id="@+id/reset"
            android:title="@string/reset"
            app:showAsAction="never"/>
</menu>