<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
                name="viewModel"
                type="com.smsrn.movieshowcase.viewmodels.MoviesDetailActivityViewModel"/>
    </data>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.activities.MovieDetailsActivity">

        <LinearLayout
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/movie_title"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@{viewModel.movieDetails.title}"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    tools:text="@string/movie_title"
                    android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/movie_year"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@{`` + viewModel.movieDetails.year}"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    tools:text="@string/movie_year"
                    android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/movie_cast"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    app:stringValues="@{viewModel.movieDetails.cast}"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    tools:text="@string/movie_cast"
                    android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/movie_genres"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    app:stringValues="@{viewModel.movieDetails.genres}"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    tools:text="@string/movie_genres"
                    android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/movie_rating"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@{`` + viewModel.movieDetails.rating}"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    tools:text="@string/movie_rating"
                    android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/linLayoutPhotosCollection"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/movie_photos_collection"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewPhotosCollection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:items="@{viewModel.items}"/>
        </LinearLayout>
    </LinearLayout>
</layout>